# open-lifeworlds-data-product-berlin-lor-monitoring-social-urban-development

./: README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  dpds.yml  main.py  odps.yml  pyproject.toml  requirements.txt
data/berlin-lor-monitoring-social-urban-development-2013-00/: berlin-lor-monitoring-social-urban-development-2013-00-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-2.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-3.csv  berlin-lor-monitoring-social-urban-development-2013-00-3.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-2.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-3.csv  berlin-lor-monitoring-social-urban-development-2013-00-district-regions.csv  berlin-lor-monitoring-social-urban-development-2013-00-district-regions.geojson  berlin-lor-monitoring-social-urban-development-2013-00-districts.csv  berlin-lor-monitoring-social-urban-development-2013-00-districts.geojson  berlin-lor-monitoring-social-urban-development-2013-00-planning-areas.csv  berlin-lor-monitoring-social-urban-development-2013-00-planning-areas.geojson
data/berlin-lor-monitoring-social-urban-development-2015-00/: berlin-lor-monitoring-social-urban-development-2015-00-1.csv  berlin-lor-monitoring-social-urban-development-2015-00-2-1.csv  berlin-lor-monitoring-social-urban-development-2015-00-2-2.csv  (+11 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
(+78 files in other folders)
